apps/sonarr/sonarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: sonarr.erix-homelab.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr-service
            port:
              number: 8989
  tls:
    - secretName: erix-homelab-site-tls
      hosts:
        - sonarr.erix-homelab.site
